semantics/imperative-os/parser.output
   0  $accept : %entry% $end

   1  prog : decls fundefs stmt

   2  decls : LBRACE nonemptydecls RBRACE
   3        | LBRACE RBRACE

   4  nonemptydecls : nonemptydecls decl
   5                | decl

   6  decl : TYPE ID SEMICOLON

   7  fundefs : nonemptyfundefs
   8          |

   9  nonemptyfundefs : nonemptyfundefs fundef
  10                  | fundef

  11  fundef : TYPE ID LPAREN paramlist RPAREN LBRACE decls stmts RBRACE

  12  paramlist : nonemptyparamlist
  13            |

  14  nonemptyparamlist : nonemptyparamlist COMMA param
  15                    | param

  16  param : TYPE ID

  17  stmts : nonemptystmts
  18        |

  19  nonemptystmts : nonemptystmts stmt
  20                | stmt

  21  stmt : ID ASSIGN expr SEMICOLON
  22       | RETURN expr SEMICOLON
  23       | LBRACE decls stmts RBRACE
  24       | WHILE LPAREN expr RPAREN stmt

  25  expr : ID
  26       | INTEGER
  27       | BOOLEAN
  28       | expr ADD expr
  29       | expr SUBTRACT expr
  30       | IF expr THEN expr ELSE expr
  31       | expr AND expr
  32       | expr OR expr
  33       | expr LT expr
  34       | NOT expr
  35       | expr EQ expr
  36       | LET ID EQ expr IN expr
  37       | LPAREN expr RPAREN
  38       | ID LPAREN arglist RPAREN

  39  arglist : nonemptyarglist
  40          |

  41  nonemptyarglist : nonemptyarglist COMMA arg
  42                  | arg

  43  arg : expr

  44  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (44)

	LBRACE  shift 3
	.  error

	prog  goto 4
	decls  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	decls : LBRACE . nonemptydecls RBRACE  (2)
	decls : LBRACE . RBRACE  (3)

	RBRACE  shift 6
	TYPE  shift 7
	.  error

	nonemptydecls  goto 8
	decl  goto 9


state 4
	%entry% : '\001' prog .  (44)

	.  reduce 44


state 5
	prog : decls . fundefs stmt  (1)
	fundefs : .  (8)

	TYPE  shift 10
	LBRACE  reduce 8
	WHILE  reduce 8
	RETURN  reduce 8
	ID  reduce 8

	fundefs  goto 11
	nonemptyfundefs  goto 12
	fundef  goto 13


state 6
	decls : LBRACE RBRACE .  (3)

	.  reduce 3


state 7
	decl : TYPE . ID SEMICOLON  (6)

	ID  shift 14
	.  error


state 8
	decls : LBRACE nonemptydecls . RBRACE  (2)
	nonemptydecls : nonemptydecls . decl  (4)

	RBRACE  shift 15
	TYPE  shift 7
	.  error

	decl  goto 16


state 9
	nonemptydecls : decl .  (5)

	.  reduce 5


state 10
	fundef : TYPE . ID LPAREN paramlist RPAREN LBRACE decls stmts RBRACE  (11)

	ID  shift 17
	.  error


state 11
	prog : decls fundefs . stmt  (1)

	LBRACE  shift 18
	WHILE  shift 19
	RETURN  shift 20
	ID  shift 21
	.  error

	stmt  goto 22


state 12
	fundefs : nonemptyfundefs .  (7)
	nonemptyfundefs : nonemptyfundefs . fundef  (9)

	TYPE  shift 10
	LBRACE  reduce 7
	WHILE  reduce 7
	RETURN  reduce 7
	ID  reduce 7

	fundef  goto 23


state 13
	nonemptyfundefs : fundef .  (10)

	.  reduce 10


state 14
	decl : TYPE ID . SEMICOLON  (6)

	SEMICOLON  shift 24
	.  error


state 15
	decls : LBRACE nonemptydecls RBRACE .  (2)

	.  reduce 2


state 16
	nonemptydecls : nonemptydecls decl .  (4)

	.  reduce 4


state 17
	fundef : TYPE ID . LPAREN paramlist RPAREN LBRACE decls stmts RBRACE  (11)

	LPAREN  shift 25
	.  error


state 18
	stmt : LBRACE . decls stmts RBRACE  (23)

	LBRACE  shift 3
	.  error

	decls  goto 26


state 19
	stmt : WHILE . LPAREN expr RPAREN stmt  (24)

	LPAREN  shift 27
	.  error


state 20
	stmt : RETURN . expr SEMICOLON  (22)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 35


state 21
	stmt : ID . ASSIGN expr SEMICOLON  (21)

	ASSIGN  shift 36
	.  error


state 22
	prog : decls fundefs stmt .  (1)

	.  reduce 1


state 23
	nonemptyfundefs : nonemptyfundefs fundef .  (9)

	.  reduce 9


state 24
	decl : TYPE ID SEMICOLON .  (6)

	.  reduce 6


state 25
	fundef : TYPE ID LPAREN . paramlist RPAREN LBRACE decls stmts RBRACE  (11)
	paramlist : .  (13)

	TYPE  shift 37
	RPAREN  reduce 13

	paramlist  goto 38
	nonemptyparamlist  goto 39
	param  goto 40


state 26
	stmt : LBRACE decls . stmts RBRACE  (23)
	stmts : .  (18)

	LBRACE  shift 18
	WHILE  shift 19
	RETURN  shift 20
	ID  shift 21
	RBRACE  reduce 18

	stmt  goto 41
	stmts  goto 42
	nonemptystmts  goto 43


state 27
	stmt : WHILE LPAREN . expr RPAREN stmt  (24)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 44


state 28
	expr : LPAREN . expr RPAREN  (37)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 45


state 29
	expr : IF . expr THEN expr ELSE expr  (30)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 46


state 30
	expr : LET . ID EQ expr IN expr  (36)

	ID  shift 47
	.  error


state 31
	expr : NOT . expr  (34)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 48


state 32
	expr : INTEGER .  (26)

	.  reduce 26


state 33
	expr : ID .  (25)
	expr : ID . LPAREN arglist RPAREN  (38)

	LPAREN  shift 49
	COMMA  reduce 25
	RPAREN  reduce 25
	SEMICOLON  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	IN  reduce 25
	ADD  reduce 25
	SUBTRACT  reduce 25
	EQ  reduce 25
	LT  reduce 25
	AND  reduce 25
	OR  reduce 25


state 34
	expr : BOOLEAN .  (27)

	.  reduce 27


state 35
	stmt : RETURN expr . SEMICOLON  (22)
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	SEMICOLON  shift 50
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 36
	stmt : ID ASSIGN . expr SEMICOLON  (21)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 57


state 37
	param : TYPE . ID  (16)

	ID  shift 58
	.  error


state 38
	fundef : TYPE ID LPAREN paramlist . RPAREN LBRACE decls stmts RBRACE  (11)

	RPAREN  shift 59
	.  error


state 39
	paramlist : nonemptyparamlist .  (12)
	nonemptyparamlist : nonemptyparamlist . COMMA param  (14)

	COMMA  shift 60
	RPAREN  reduce 12


state 40
	nonemptyparamlist : param .  (15)

	.  reduce 15


state 41
	nonemptystmts : stmt .  (20)

	.  reduce 20


state 42
	stmt : LBRACE decls stmts . RBRACE  (23)

	RBRACE  shift 61
	.  error


state 43
	stmts : nonemptystmts .  (17)
	nonemptystmts : nonemptystmts . stmt  (19)

	LBRACE  shift 18
	WHILE  shift 19
	RETURN  shift 20
	ID  shift 21
	RBRACE  reduce 17

	stmt  goto 62


state 44
	stmt : WHILE LPAREN expr . RPAREN stmt  (24)
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	RPAREN  shift 63
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 45
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)
	expr : LPAREN expr . RPAREN  (37)

	RPAREN  shift 64
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 46
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : IF expr . THEN expr ELSE expr  (30)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	THEN  shift 65
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 47
	expr : LET ID . EQ expr IN expr  (36)

	EQ  shift 66
	.  error


48: shift/reduce conflict (shift 53, reduce 34) on EQ
48: shift/reduce conflict (shift 54, reduce 34) on LT
state 48
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : NOT expr .  (34)
	expr : expr . EQ expr  (35)

	EQ  shift 53
	LT  shift 54
	COMMA  reduce 34
	RPAREN  reduce 34
	SEMICOLON  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	IN  reduce 34
	ADD  reduce 34
	SUBTRACT  reduce 34
	AND  reduce 34
	OR  reduce 34


state 49
	expr : ID LPAREN . arglist RPAREN  (38)
	arglist : .  (40)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	RPAREN  reduce 40

	expr  goto 67
	arglist  goto 68
	nonemptyarglist  goto 69
	arg  goto 70


state 50
	stmt : RETURN expr SEMICOLON .  (22)

	.  reduce 22


state 51
	expr : expr ADD . expr  (28)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 71


state 52
	expr : expr SUBTRACT . expr  (29)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 72


state 53
	expr : expr EQ . expr  (35)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 73


state 54
	expr : expr LT . expr  (33)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 74


state 55
	expr : expr AND . expr  (31)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 75


state 56
	expr : expr OR . expr  (32)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 76


state 57
	stmt : ID ASSIGN expr . SEMICOLON  (21)
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	SEMICOLON  shift 77
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 58
	param : TYPE ID .  (16)

	.  reduce 16


state 59
	fundef : TYPE ID LPAREN paramlist RPAREN . LBRACE decls stmts RBRACE  (11)

	LBRACE  shift 78
	.  error


state 60
	nonemptyparamlist : nonemptyparamlist COMMA . param  (14)

	TYPE  shift 37
	.  error

	param  goto 79


state 61
	stmt : LBRACE decls stmts RBRACE .  (23)

	.  reduce 23


state 62
	nonemptystmts : nonemptystmts stmt .  (19)

	.  reduce 19


state 63
	stmt : WHILE LPAREN expr RPAREN . stmt  (24)

	LBRACE  shift 18
	WHILE  shift 19
	RETURN  shift 20
	ID  shift 21
	.  error

	stmt  goto 80


state 64
	expr : LPAREN expr RPAREN .  (37)

	.  reduce 37


state 65
	expr : IF expr THEN . expr ELSE expr  (30)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 81


state 66
	expr : LET ID EQ . expr IN expr  (36)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 82


state 67
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)
	arg : expr .  (43)

	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 43
	RPAREN  reduce 43


state 68
	expr : ID LPAREN arglist . RPAREN  (38)

	RPAREN  shift 83
	.  error


state 69
	arglist : nonemptyarglist .  (39)
	nonemptyarglist : nonemptyarglist . COMMA arg  (41)

	COMMA  shift 84
	RPAREN  reduce 39


state 70
	nonemptyarglist : arg .  (42)

	.  reduce 42


71: shift/reduce conflict (shift 53, reduce 28) on EQ
71: shift/reduce conflict (shift 54, reduce 28) on LT
state 71
	expr : expr . ADD expr  (28)
	expr : expr ADD expr .  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 28
	RPAREN  reduce 28
	SEMICOLON  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	IN  reduce 28
	ADD  reduce 28


72: shift/reduce conflict (shift 53, reduce 29) on EQ
72: shift/reduce conflict (shift 54, reduce 29) on LT
state 72
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr SUBTRACT expr .  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 29
	RPAREN  reduce 29
	SEMICOLON  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	IN  reduce 29
	ADD  reduce 29
	SUBTRACT  reduce 29


73: shift/reduce conflict (shift 51, reduce 35) on ADD
73: shift/reduce conflict (shift 52, reduce 35) on SUBTRACT
73: shift/reduce conflict (shift 53, reduce 35) on EQ
73: shift/reduce conflict (shift 54, reduce 35) on LT
73: shift/reduce conflict (shift 55, reduce 35) on AND
73: shift/reduce conflict (shift 56, reduce 35) on OR
state 73
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)
	expr : expr EQ expr .  (35)

	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 35
	RPAREN  reduce 35
	SEMICOLON  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	IN  reduce 35


74: shift/reduce conflict (shift 51, reduce 33) on ADD
74: shift/reduce conflict (shift 52, reduce 33) on SUBTRACT
74: shift/reduce conflict (shift 53, reduce 33) on EQ
74: shift/reduce conflict (shift 54, reduce 33) on LT
74: shift/reduce conflict (shift 55, reduce 33) on AND
74: shift/reduce conflict (shift 56, reduce 33) on OR
state 74
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr LT expr .  (33)
	expr : expr . EQ expr  (35)

	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 33
	RPAREN  reduce 33
	SEMICOLON  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	IN  reduce 33


75: shift/reduce conflict (shift 53, reduce 31) on EQ
75: shift/reduce conflict (shift 54, reduce 31) on LT
state 75
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr AND expr .  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	EQ  shift 53
	LT  shift 54
	OR  shift 56
	COMMA  reduce 31
	RPAREN  reduce 31
	SEMICOLON  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	IN  reduce 31
	ADD  reduce 31
	SUBTRACT  reduce 31
	AND  reduce 31


76: shift/reduce conflict (shift 53, reduce 32) on EQ
76: shift/reduce conflict (shift 54, reduce 32) on LT
state 76
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr OR expr .  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	EQ  shift 53
	LT  shift 54
	COMMA  reduce 32
	RPAREN  reduce 32
	SEMICOLON  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	IN  reduce 32
	ADD  reduce 32
	SUBTRACT  reduce 32
	AND  reduce 32
	OR  reduce 32


state 77
	stmt : ID ASSIGN expr SEMICOLON .  (21)

	.  reduce 21


state 78
	fundef : TYPE ID LPAREN paramlist RPAREN LBRACE . decls stmts RBRACE  (11)

	LBRACE  shift 3
	.  error

	decls  goto 85


state 79
	nonemptyparamlist : nonemptyparamlist COMMA param .  (14)

	.  reduce 14


state 80
	stmt : WHILE LPAREN expr RPAREN stmt .  (24)

	.  reduce 24


state 81
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : IF expr THEN expr . ELSE expr  (30)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	ELSE  shift 86
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 82
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)
	expr : LET ID EQ expr . IN expr  (36)

	IN  shift 87
	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	.  error


state 83
	expr : ID LPAREN arglist RPAREN .  (38)

	.  reduce 38


state 84
	nonemptyarglist : nonemptyarglist COMMA . arg  (41)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 67
	arg  goto 88


state 85
	fundef : TYPE ID LPAREN paramlist RPAREN LBRACE decls . stmts RBRACE  (11)
	stmts : .  (18)

	LBRACE  shift 18
	WHILE  shift 19
	RETURN  shift 20
	ID  shift 21
	RBRACE  reduce 18

	stmt  goto 41
	stmts  goto 89
	nonemptystmts  goto 43


state 86
	expr : IF expr THEN expr ELSE . expr  (30)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 90


state 87
	expr : LET ID EQ expr IN . expr  (36)

	LPAREN  shift 28
	IF  shift 29
	LET  shift 30
	NOT  shift 31
	INTEGER  shift 32
	ID  shift 33
	BOOLEAN  shift 34
	.  error

	expr  goto 91


state 88
	nonemptyarglist : nonemptyarglist COMMA arg .  (41)

	.  reduce 41


state 89
	fundef : TYPE ID LPAREN paramlist RPAREN LBRACE decls stmts . RBRACE  (11)

	RBRACE  shift 92
	.  error


90: shift/reduce conflict (shift 51, reduce 30) on ADD
90: shift/reduce conflict (shift 52, reduce 30) on SUBTRACT
90: shift/reduce conflict (shift 53, reduce 30) on EQ
90: shift/reduce conflict (shift 54, reduce 30) on LT
90: shift/reduce conflict (shift 55, reduce 30) on AND
90: shift/reduce conflict (shift 56, reduce 30) on OR
state 90
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : IF expr THEN expr ELSE expr .  (30)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)

	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 30
	RPAREN  reduce 30
	SEMICOLON  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	IN  reduce 30


91: shift/reduce conflict (shift 51, reduce 36) on ADD
91: shift/reduce conflict (shift 52, reduce 36) on SUBTRACT
91: shift/reduce conflict (shift 53, reduce 36) on EQ
91: shift/reduce conflict (shift 54, reduce 36) on LT
91: shift/reduce conflict (shift 55, reduce 36) on AND
91: shift/reduce conflict (shift 56, reduce 36) on OR
state 91
	expr : expr . ADD expr  (28)
	expr : expr . SUBTRACT expr  (29)
	expr : expr . AND expr  (31)
	expr : expr . OR expr  (32)
	expr : expr . LT expr  (33)
	expr : expr . EQ expr  (35)
	expr : LET ID EQ expr IN expr .  (36)

	ADD  shift 51
	SUBTRACT  shift 52
	EQ  shift 53
	LT  shift 54
	AND  shift 55
	OR  shift 56
	COMMA  reduce 36
	RPAREN  reduce 36
	SEMICOLON  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	IN  reduce 36


state 92
	fundef : TYPE ID LPAREN paramlist RPAREN LBRACE decls stmts RBRACE .  (11)

	.  reduce 11


State 48 contains 2 shift/reduce conflicts.
State 71 contains 2 shift/reduce conflicts.
State 72 contains 2 shift/reduce conflicts.
State 73 contains 6 shift/reduce conflicts.
State 74 contains 6 shift/reduce conflicts.
State 75 contains 2 shift/reduce conflicts.
State 76 contains 2 shift/reduce conflicts.
State 90 contains 6 shift/reduce conflicts.
State 91 contains 6 shift/reduce conflicts.


32 terminals, 19 nonterminals
45 grammar rules, 93 states
